Implmeneitng invoice attachments for automatic invoice
git-tfs-id: [http://developmentvlan:8585/tfs/vanrise.collection]$/;C42156

--- a/Vanrise/Code/Vanrise.Invoice.MainExtensions/Vanrise.Invoice.MainExtensions.csproj
+++ b/Vanrise/Code/Vanrise.Invoice.MainExtensions/Vanrise.Invoice.MainExtensions.csproj
@@ -54,6 +54,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="AutomaticInvoiceActions\AutomaticSendEmailAction.cs" />
+    <Compile Include="AutomaticInvoiceActions\AutomaticSendEmailActionRuntimeSettings.cs" />
     <Compile Include="BillingPeriod\BiMonthlyBillingPeriod.cs" />
     <Compile Include="BillingPeriod\BiWeeklyBillingPeriod.cs" />
     <Compile Include="BillingPeriod\MonthlyBillingPeriod.cs" />
