--- a/Vanrise/Code/Vanrise.Invoice.Entities/Vanrise.Invoice.Entities.csproj
+++ b/Vanrise/Code/Vanrise.Invoice.Entities/Vanrise.Invoice.Entities.csproj
@@ -96,6 +96,7 @@
     <Compile Include="InvoiceType\InvoiceFileConverter.cs" />
     <Compile Include="InvoiceType\EffectivePartnerInvoiceSetting.cs" />
     <Compile Include="InvoiceType\InvoiceSettingParts\AutomaticInvoiceSettingPart.cs" />
+    <Compile Include="InvoiceType\InvoiceSettingParts\AutomaticInvoiceSettingPartRuntime.cs" />
     <Compile Include="InvoiceType\InvoiceSettingParts\BillingPeriodInvoiceSettingPart.cs" />
     <Compile Include="InvoiceType\InvoiceSettingParts\DuePeriodInvoiceSettingPart.cs" />
     <Compile Include="InvoiceType\InvoiceSettingParts\InitialSequenceValueSettingPart.cs" />
