--- a/TOneV2/Code/TOneV2/TOne.WhS.Deal.Entities/TOne.WhS.Deal.Entities.csproj
+++ b/TOneV2/Code/TOneV2/TOne.WhS.Deal.Entities/TOne.WhS.Deal.Entities.csproj
@@ -49,6 +49,7 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="DealBillingSummary\DealBillingSummary.cs" />
     <Compile Include="DealDefinition\DealDefinitionFilter.cs" />
     <Compile Include="DealDefinition\DealDefinitionInfo.cs" />
     <Compile Include="DealDefinition\DealEntities.cs" />
