Implementing Automatic Invoice Send Email Action
git-tfs-id: [http://developmentvlan:8585/tfs/vanrise.collection]$/;C42178

--- a/Vanrise/Code/Vanrise.Invoice.Entities/Vanrise.Invoice.Entities.csproj
+++ b/Vanrise/Code/Vanrise.Invoice.Entities/Vanrise.Invoice.Entities.csproj
@@ -59,6 +59,7 @@
     <Compile Include="GeneratedInvoice\GeneratedInvoice.cs" />
     <Compile Include="GeneratedInvoice\GeneratedInvoiceItem.cs" />
     <Compile Include="GeneratedInvoice\GeneratedInvoiceItemSet.cs" />
+    <Compile Include="IAutomaticSendEmailActionRuntimeSettingsContext.cs" />
     <Compile Include="IInvoicePartnerFilter.cs" />
     <Compile Include="InvoiceByPartnerInvoiceType.cs" />
     <Compile Include="InvoiceGeneratorException.cs" />
