--- a/Vanrise/Code/Vanrise.Invoice.Business/Vanrise.Invoice.Business.csproj
+++ b/Vanrise/Code/Vanrise.Invoice.Business/Vanrise.Invoice.Business.csproj
@@ -44,6 +44,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="BillingPeriodInfoManager.cs" />
+    <Compile Include="Context\AutomaticSendEmailActionRuntimeSettingsContext.cs" />
     <Compile Include="Context\BillingPeriodContext.cs" />
     <Compile Include="Context\ExtendedSettingsPartnerIdsContext.cs" />
     <Compile Include="Context\GetMeasureValueContext.cs" />
