added Local Service migrator to Multinet migrator
git-tfs-id: [http://developmentvlan:8585/tfs/vanrise.collection]$/;C42216

--- a/Retail/Code/Retail.EntitiesMigrator/Retail.EntitiesMigrator.csproj
+++ b/Retail/Code/Retail.EntitiesMigrator/Retail.EntitiesMigrator.csproj
@@ -180,6 +180,7 @@
     </Compile>
     <Compile Include="Migrators\IncomingRatesMigrator.cs" />
     <Compile Include="Migrators\InternationalRatesMigrator.cs" />
+    <Compile Include="Migrators\LocalRatesMigrator.cs" />
     <Compile Include="Migrators\MonthlyChargesMigrator.cs" />
     <Compile Include="Migrators\OffNetRatesMigrator.cs" />
     <Compile Include="Migrators\MobileRatesMigrator .cs" />
