--- a/Retail/Code/Retail.Cost.Entities/Retail.Cost.Entities.csproj
+++ b/Retail/Code/Retail.Cost.Entities/Retail.Cost.Entities.csproj
@@ -46,10 +46,13 @@
     <Compile Include="CDRCost\CDRCostBatchRequest.cs" />
     <Compile Include="CDRCost\CDRCostRequest.cs" />
     <Compile Include="CDRCost\CDRCostResponse.cs" />
-    <Compile Include="ProcessedCDRCost\ProcessedCDRCost.cs" />
+    <Compile Include="CDRCost\CDRCost.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Settings\CostSettingData.cs" />
     <Compile Include="Settings\CostTechnicalSettingData.cs" />
+  </ItemGroup>
+  <ItemGroup>
+    <Folder Include="ProcessedCDRCost\" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
