Adding Cost WebVirtualDirectory and CostSettingsData
git-tfs-id: [http://developmentvlan:8585/tfs/vanrise.collection]$/;C42230

--- a/Retail/Code/Retail.Cost.Web/Retail.Cost.Web.csproj
+++ b/Retail/Code/Retail.Cost.Web/Retail.Cost.Web.csproj
@@ -139,7 +139,10 @@
   </ItemGroup>
   <ItemGroup>
     <Folder Include="Controllers\" />
-    <Folder Include="Retail_Cost\" />
+  </ItemGroup>
+  <ItemGroup>
+    <Content Include="Retail_Cost\Settings\Directives\retail-cost-settings-editor.js" />
+    <Content Include="Retail_Cost\Settings\Directives\Templates\CostSettingsEditorTemplate.html" />
   </ItemGroup>
   <PropertyGroup>
     <VisualStudioVersion Condition="'$(VisualStudioVersion)' == ''">10.0</VisualStudioVersion>
