--- a/Retail/Code/Retail.Cost.Data/Retail.Cost.Data.csproj
+++ b/Retail/Code/Retail.Cost.Data/Retail.Cost.Data.csproj
@@ -48,7 +48,7 @@
   <ItemGroup>
     <Compile Include="CostDataManagerFactory.cs" />
     <Compile Include="IDataManager.cs" />
-    <Compile Include="IProcessedCDRCostDataManager.cs" />
+    <Compile Include="ICDRCostDataManager.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
