--- a/Retail/Code/Retail.Cost.Data.SQL/Retail.Cost.Data.SQL.csproj
+++ b/Retail/Code/Retail.Cost.Data.SQL/Retail.Cost.Data.SQL.csproj
@@ -49,7 +49,7 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="ProcessedCDRCostDataManager.cs" />
+    <Compile Include="CDRCostDataManager.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
