--- a/Retail/Code/Retail.Cost.BP.Activities/Retail.Cost.BP.Activities.csproj
+++ b/Retail/Code/Retail.Cost.BP.Activities/Retail.Cost.BP.Activities.csproj
@@ -47,9 +47,13 @@
     <Reference Include="System.Xaml" />
     <Reference Include="System.Xml" />
     <Reference Include="System.Xml.Linq" />
+    <Reference Include="Vanrise.Entities">
+      <HintPath>..\..\..\Vanrise\Code\Output\Vanrise.Entities.dll</HintPath>
+    </Reference>
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="LoadCostCDRDataToReprocess.cs" />
     <Compile Include="UpadeOverridenCostCDR.cs" />
   </ItemGroup>
   <ItemGroup>
