--- a/Retail/Code/Retail.Cost.Entities/Retail.Cost.Entities.csproj
+++ b/Retail/Code/Retail.Cost.Entities/Retail.Cost.Entities.csproj
@@ -47,6 +47,9 @@
     <Reference Include="Vanrise.GenericData.Entities">
       <HintPath>..\..\..\Vanrise\Code\Output\Vanrise.GenericData.Entities.dll</HintPath>
     </Reference>
+    <Reference Include="Vanrise.Reprocess.Entities">
+      <HintPath>..\..\..\BusinessProcess\Code\Output\Vanrise.Reprocess.Entities.dll</HintPath>
+    </Reference>
   </ItemGroup>
   <ItemGroup>
     <Compile Include="CDRCost\CDRCostBatchRequest.cs" />
