--- a/Vanrise/Code/Vanrise.Web/Vanrise.Web.csproj
+++ b/Vanrise/Code/Vanrise.Web/Vanrise.Web.csproj
@@ -155,6 +155,7 @@
     <Compile Include="App_Start\RouteConfig.cs" />
     <Compile Include="App_Start\Utils.cs" />
     <Compile Include="App_Start\WebApiConfig.cs" />
+    <Content Include="Client\Javascripts\Services\vr-dragdrop-service.js" />
     <Compile Include="Controllers\HomeController.cs" />
     <Compile Include="Controllers\SecurityController.cs" />
     <Compile Include="Controllers\ValuesController.cs" />
@@ -334,6 +335,7 @@
     <Content Include="Client\Javascripts\Directives\TimeRange\vr-timedimension-selector.js" />
     <Content Include="Client\Javascripts\Directives\TimeRange\vr-period-selector.js" />
     <Content Include="Client\Javascripts\Directives\TimeRange\vr-timerange-directive.js" />
+    <Content Include="Client\Javascripts\Directives\ToolBox\vr-toolbox-directive.js" />
     <Content Include="Client\Javascripts\Directives\TreeView\vr-treeview-directive.js" />
     <Content Include="Client\Javascripts\Filters\vr-time-no-timezone-filter.js" />
     <Content Include="Client\Javascripts\Filters\vr-text-or-number-filter.js" />
