--- a/Retail/Code/Retail.Cost.BP/Retail.Cost.BP.csproj
+++ b/Retail/Code/Retail.Cost.BP/Retail.Cost.BP.csproj
@@ -86,6 +86,10 @@
       <Project>{004efc23-3577-4d54-b935-901ca21c4a4f}</Project>
       <Name>Retail.Cost.BP.Activities</Name>
     </ProjectReference>
+    <ProjectReference Include="..\Retail.Cost.BP.Arguments\Retail.Cost.BP.Arguments.csproj">
+      <Project>{af85b6f6-461d-477d-8e5a-459fba704d8a}</Project>
+      <Name>Retail.Cost.BP.Arguments</Name>
+    </ProjectReference>
     <ProjectReference Include="..\Retail.Cost.Business\Retail.Cost.Business.csproj">
       <Project>{72d1f349-fc2a-4f5e-bf3c-6fe371790137}</Project>
       <Name>Retail.Cost.Business</Name>
