--- a/Retail/Code/Retail.Cost.BP.Activities/Retail.Cost.BP.Activities.csproj
+++ b/Retail/Code/Retail.Cost.BP.Activities/Retail.Cost.BP.Activities.csproj
@@ -52,9 +52,10 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="GetCDRCostTechnicalSettingsData.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="LoadCostCDRDataToReprocess.cs" />
-    <Compile Include="UpadeOverridenCostCDR.cs" />
+    <Compile Include="LoadCDRCostDataToReprocess.cs" />
+    <Compile Include="UpadeOverridenCDRCost.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\Retail.Cost.Business\Retail.Cost.Business.csproj">
