--- a/Vanrise/Code/Vanrise.Common.Business/Vanrise.Common.Business.csproj
+++ b/Vanrise/Code/Vanrise.Common.Business/Vanrise.Common.Business.csproj
@@ -62,6 +62,7 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="BE360Degree\BE360DegreeManager.cs" />
     <Compile Include="BigData\BigDataManager.cs" />
     <Compile Include="BigData\BigDataRequestHandler.cs" />
     <Compile Include="BigData\BigDataRuntimeService.cs" />
