--- a/Retail/Code/Retail.BusinessEntity.Business/Retail.BusinessEntity.Business.csproj
+++ b/Retail/Code/Retail.BusinessEntity.Business/Retail.BusinessEntity.Business.csproj
@@ -147,6 +147,7 @@
     <Compile Include="AccountHandlers\BaseAccountEventPayload.cs" />
     <Compile Include="AccountPartDefinitionOverriddenConfiguration.cs" />
     <Compile Include="AccountTypeOverriddenConfiguration.cs" />
+    <Compile Include="Extensions\AccountBE360DegreeNodeType.cs" />
     <Compile Include="Extensions\AccountBERuntimeSelectorFilter.cs" />
     <Compile Include="Extensions\AccountMemoryAnalyticDataManager.cs" />
     <Compile Include="Extensions\DIDSynchronizer.cs" />
