added Carrier BE360Degree Node Types
git-tfs-id: [http://developmentvlan:8585/tfs/vanrise.collection]$/;C42266

--- a/TOneV2/Code/TOneV2/TOne.WhS.BusinessEntity.Business/TOne.WhS.BusinessEntity.Business.csproj
+++ b/TOneV2/Code/TOneV2/TOne.WhS.BusinessEntity.Business/TOne.WhS.BusinessEntity.Business.csproj
@@ -107,7 +107,10 @@
     <Compile Include="AccountManagerManager.cs" />
     <Compile Include="BECacheExpirationChecker.cs" />
     <Compile Include="CarrierAccounts\BaseCarrierAccountEventPayload.cs" />
+    <Compile Include="CarrierAccounts\CarrierAccountBE360DegreeNodeType.cs" />
     <Compile Include="CarrierProfiles\BaseCarrierProfileEventPayload.cs" />
+    <Compile Include="CarrierProfiles\CarrierProfileAccountsBE360DegreeNodeType.cs" />
+    <Compile Include="CarrierProfiles\CarrierProfileBE360DegreeNodeType.cs" />
     <Compile Include="ConfigManager.cs" />
     <Compile Include="CarrierAccounts\CustomerGroupContext.cs" />
     <Compile Include="CarrierAccounts\SupplierGroupContext.cs" />
