--- a/Vanrise/Code/Vanrise.HelperTools/App.config
+++ b/Vanrise/Code/Vanrise.HelperTools/App.config
@@ -6,5 +6,8 @@
   <appSettings>
     <add key="EncryptionSecretKey" value="V@nR!se-Se6r3t" />
     <add key="BCPTempFilesDirectory" value="D:\Test" />
+
+    <add key="ServerIP" value="192.168.110.185"/>
+    <add key="ActiveDBs" value="StandardConfigurationStructure#StandardLoggingStructure#StandardQueueingStructure#StandardTransactionStructure#StandardTOneWhS_BEStructure#StandardTOneWhS_BEStructure_StateBackup#StandardTOneWhS_CDR#StandardTOneWhS_Analytics#StandardMediation_CDRStructure#StandardMediationStructure#StandardRetailStructure#StandardRetail_Analytics#StandardRetail_EDR#StandardRetailStructure_Ringo#StandardXBoosterStructure#StandardXBooster_CDRComparisonOutputStructure"/>
   </appSettings>
 </configuration>
