--- a/Demo.project/Code/Demo.Web/Web.config
+++ b/Demo.project/Code/Demo.Web/Web.config
@@ -11,7 +11,8 @@
     <loggers>
       <logger name="SQLLogger" type="Vanrise.Logging.SQL.SQLLogger, Vanrise.Logging.SQL">
         <parameters>
-          <parameter name="ConnectionStringKey" value="LogDBConnString" />
+          <parameter name="LoggingConnectionStringKey" value="LogDBConnString" />
+          <parameter name="ConfigurationConnectionStringKey" value="ConfigurationDBConnString" />
         </parameters>
       </logger>
       <logger name="ConsoleLogger" type="Vanrise.Common.ConsoleLogger, Vanrise.Common"></logger>
@@ -48,6 +49,9 @@
     <add key="IntegrationConfigDBConnStringKey" value="ConfigurationDBConnString"/>
     <add key="RuntimeConfigDBConnStringKey" value="ConfigurationDBConnString"/>
     <add key="QueueingConfigDBConnStringKey" value="ConfigurationDBConnString"/>
+    <add key="LoggingDBConnStringKey"                           value="LogDBConnString"/>
+    <add key="LoggingConfigDBConnStringKey"                     value="ConfigurationDBConnString"/>
+    
   </appSettings>
   <system.web>
     <compilation debug="true" targetFramework="4.5" />
