--- a/Retail/Code/Retail.Cost.Business/Retail.Cost.Business.csproj
+++ b/Retail/Code/Retail.Cost.Business/Retail.Cost.Business.csproj
@@ -72,6 +72,10 @@
     <Reference Include="Vanrise.Queueing.Entities">
       <HintPath>..\..\..\BusinessProcess\Code\Output\Vanrise.Queueing.Entities.dll</HintPath>
     </Reference>
+    <Reference Include="Vanrise.Reprocess.Entities, Version=1.0.0.0, Culture=neutral, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>..\..\..\BusinessProcess\Code\Output\Vanrise.Reprocess.Entities.dll</HintPath>
+    </Reference>
   </ItemGroup>
   <ItemGroup>
     <Compile Include="CDRCostManager.cs" />
