--- a/Retail/Code/Retail.BusinessEntity.Entities/Retail.BusinessEntity.Entities.csproj
+++ b/Retail/Code/Retail.BusinessEntity.Entities/Retail.BusinessEntity.Entities.csproj
@@ -151,6 +151,7 @@
     <Compile Include="RecurringCharge\Evaluator\RecurringChargeEvaluatorDefinitionSettings.cs" />
     <Compile Include="RecurringCharge\Evaluator\RecurringChargeEvaluatorOutput.cs" />
     <Compile Include="RecurringCharge\Evaluator\RecurringChargeEvaluatorSettings.cs" />
+    <Compile Include="Settings\RetailCentrexTechnicalSettings.cs" />
     <Compile Include="Settings\DIDTechnicalSettings.cs" />
     <Compile Include="Package\Definition\PackageDefinition.cs" />
     <Compile Include="Package\Definition\PackageDefinitionConfig.cs" />
