Userr Group relation UI reflection and backend implementation
git-tfs-id: [http://developmentvlan:8585/tfs/vanrise.collection]$/;C42339

--- a/Vanrise/Code/Vanrise.Security.Entities/Vanrise.Security.Entities.csproj
+++ b/Vanrise/Code/Vanrise.Security.Entities/Vanrise.Security.Entities.csproj
@@ -114,6 +114,8 @@
     <Compile Include="User\UserInfo.cs" />
     <Compile Include="User\UserProfile.cs" />
     <Compile Include="User\UserQuery.cs" />
+    <Compile Include="User\UserToUpdate.cs" />
+    <Compile Include="User\UserToAdd.cs" />
     <Compile Include="View\View.cs" />
     <Compile Include="View\ViewContentItem.cs" />
     <Compile Include="View\ViewContent.cs" />
