Adding GenerateAlertProcess Task
git-tfs-id: [http://developmentvlan:8585/tfs/vanrise.collection]$/;C42369

--- a/Vanrise/Code/Vanrise.Analytic.Web/Vanrise.Analytic.Web.csproj
+++ b/Vanrise/Code/Vanrise.Analytic.Web/Vanrise.Analytic.Web.csproj
@@ -182,6 +182,8 @@
     <Content Include="Analytic\Directives\DataAnalysis\ProfilingAndCalculation\Common\Templates\DAProfCalcSettingsSelectorTemplate.html" />
     <Content Include="Analytic\Directives\DataAnalysis\ProfilingAndCalculation\Common\Templates\DAProfCalcAggregationFieldManagementTemplate.html" />
     <Content Include="Analytic\Directives\DataAnalysis\Common\vr-analytic-darecordaggregate-selective.js" />
+    <Content Include="Analytic\Directives\DataAnalysis\ProfilingAndCalculation\ScheduleTask\Templates\GenerateAlertProcessTaskTemplate.html" />
+    <Content Include="Analytic\Directives\DataAnalysis\ProfilingAndCalculation\ScheduleTask\vr-analytic-daprofcalc-generatealertprocesstask.js" />
     <Content Include="Analytic\Directives\Definition\AnalyticConfig\Templates\AnalyticDimensionGridTemplate.html" />
     <Content Include="Analytic\Directives\Definition\AnalyticConfig\Templates\AnalyticJoinGridTemplate.html" />
     <Content Include="Analytic\Directives\Definition\AnalyticConfig\Templates\AnalyticAggregateGridTemplate.html" />
