--- a/TOneV2/Code/TOneV2/TestRuntime/app.config
+++ b/TOneV2/Code/TOneV2/TestRuntime/app.config
@@ -45,29 +45,29 @@
         </runtimeServices>
       </runtimeServiceGroup>
       <!-- Related to processing batches from queues and saving them to database such as Main - Invalid - Failed tables. nbOfRuntimeInstances depended on available resources.-->
-      <!--<runtimeServiceGroup name="group4" nbOfRuntimeInstances="1">
+      <runtimeServiceGroup name="group4" nbOfRuntimeInstances="1">
         <runtimeServices>
           <runtimeService name="Queue Activation Service" type="Vanrise.Queueing.QueueActivationRuntimeService, Vanrise.Queueing" interval="00:00:00.100"></runtimeService>
         </runtimeServices>
-      </runtimeServiceGroup>-->
+      </runtimeServiceGroup>
       <!-- Related to saving batches as queues in database at end stages such as Billingstats and traffic stats. nbOfRuntimeInstances depended on available resources.-->
-      <!--<runtimeServiceGroup name="group5" nbOfRuntimeInstances="1">
+      <runtimeServiceGroup name="group5" nbOfRuntimeInstances="1">
         <runtimeServices>
           <runtimeService name="Summary Queue Activation Service" type="Vanrise.Queueing.SummaryQueueActivationRuntimeService, Vanrise.Queueing" interval="00:00:00.100"></runtimeService>
         </runtimeServices>
-      </runtimeServiceGroup>-->
+      </runtimeServiceGroup>
       <!-- Related to Data sources such CDR Import process. nbOfRuntimeInstances should be equal to "Number Of Parallel Readers" configured in Data source management page.-->
-      <!--<runtimeServiceGroup name="group6" nbOfRuntimeInstances="1">
+      <runtimeServiceGroup name="group6" nbOfRuntimeInstances="1">
         <runtimeServices>
           <runtimeService name="Data Source Runtime Service" type="Vanrise.Integration.Business.DataSourceRuntimeService, Vanrise.Integration.Business" interval="00:00:02"></runtimeService>
         </runtimeServices>
-      </runtimeServiceGroup>-->
+      </runtimeServiceGroup>
       <!-- Used to cache Data Result in Memory in order to handle Paging and sorting on the UI grids. nbOfRuntimeInstances depended on available resources.-->
-      <!--<runtimeServiceGroup name="group7" nbOfRuntimeInstances="1">
+      <runtimeServiceGroup name="group7" nbOfRuntimeInstances="1">
         <runtimeServices>
           <runtimeService name="Big Data Runtime Service" type="Vanrise.Common.Business.BigDataRuntimeService, Vanrise.Common.Business" interval="00:00:02"></runtimeService>
         </runtimeServices>
-      </runtimeServiceGroup>-->
+      </runtimeServiceGroup>
       <runtimeServiceGroup name="group8" nbOfRuntimeInstances="1">
         <runtimeServices>
           <runtimeService name="Data Grouping Distributor Runtime Service" type="Vanrise.Common.Business.DataGroupingDistributorRuntimeService, Vanrise.Common.Business" interval="00:00:02"></runtimeService>
