adding zip utility class
git-tfs-id: [http://developmentvlan:8585/tfs/vanrise.collection]$/;C42409

--- a/Vanrise/Code/Vanrise.Common/Vanrise.Common.csproj
+++ b/Vanrise/Code/Vanrise.Common/Vanrise.Common.csproj
@@ -114,6 +114,7 @@
     <Compile Include="Serializer.cs" />
     <Compile Include="VRDictionary.cs" />
     <Compile Include="VRWebAPIClient.cs" />
+    <Compile Include="ZipUtility.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\Resources\Resources.csproj">
