adding salePriceListInput Class
git-tfs-id: [http://developmentvlan:8585/tfs/vanrise.collection]$/;C42411

--- a/TOneV2/Code/TOneV2/TOne.WhS.BusinessEntity.Entities/TOne.WhS.BusinessEntity.Entities.csproj
+++ b/TOneV2/Code/TOneV2/TOne.WhS.BusinessEntity.Entities/TOne.WhS.BusinessEntity.Entities.csproj
@@ -135,6 +135,7 @@
     <Compile Include="SalePricelistChanges\SalePricelistRPChange.cs" />
     <Compile Include="SalePricelistChanges\SalePricelistRPChangeDetail.cs" />
     <Compile Include="SalePricelistChanges\SalePriceListSnapshot.cs" />
+    <Compile Include="SalePriceList\SalePriceListInput.cs" />
     <Compile Include="SaleRate\History\CustomerZoneRates.cs" />
     <Compile Include="SaleRate\History\SaleRateHistoryQuery.cs" />
     <Compile Include="SaleRate\History\SaleRateHistoryRecord.cs" />
