Implementing account balance and updating scripts
git-tfs-id: [http://developmentvlan:8585/tfs/vanrise.collection]$/;C42418

--- a/TOneV2/Code/TOneV2/TOne.WhS.AccountBalance.Business/TOne.WhS.AccountBalance.Business.csproj
+++ b/TOneV2/Code/TOneV2/TOne.WhS.AccountBalance.Business/TOne.WhS.AccountBalance.Business.csproj
@@ -79,6 +79,8 @@
     <Compile Include="FinancialAccountDefinitionManager.cs" />
     <Compile Include="FinancialAccountManager.cs" />
     <Compile Include="IAccountTypeInfoFilter\FinancialAccountTypeFilter.cs" />
+    <Compile Include="AccountBalanceCarrierAccountStatusChangedHandler.cs" />
+    <Compile Include="AccountBalanceCarrierProfileStatusChangedHandler.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
