Implementing validation for invoice and refactoring account balance
git-tfs-id: [http://developmentvlan:8585/tfs/vanrise.collection]$/;C42419

--- a/Vanrise/Code/Vanrise.Invoice.Entities/Vanrise.Invoice.Entities.csproj
+++ b/Vanrise/Code/Vanrise.Invoice.Entities/Vanrise.Invoice.Entities.csproj
@@ -151,6 +151,7 @@
     <Compile Include="RDLCBankDetails.cs" />
     <Compile Include="RDLCTaxItemDetail.cs" />
     <Compile Include="SourceInvoice.cs" />
+    <Compile Include="VRPopulatedPeriod.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\Vanrise.BEBridge.Entities\Vanrise.BEBridge.Entities.csproj">
